Fix overflow hidden issue with 3rd level menu

--- a/web/src/stylesheets/components/_miwt-menu.scss
+++ b/web/src/stylesheets/components/_miwt-menu.scss
@@ -38,8 +38,6 @@
 		ul.menu-items {
 			left:auto;
 			right:100%;
-			max-height: 300px;
-			overflow-y: auto;
 		}
 
 		a.menu-item,
